--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "antd": "^5.7.0",
     "axios": "^1.4.0",
     "bignumber.js": "^9.1.1",
+    "ethers": "^6.7.0",
     "graphql": "^16.7.1",
     "grommet": "^2.33.0",
     "mobx": "^6.9.1",
