added total revenue

--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "@apollo/client": "^3.7.17",
     "@graphql-codegen/cli": "^5.0.0",
     "@graphql-codegen/client-preset": "^4.1.0",
+    "@uniswap/v2-sdk": "^3.2.0",
+    "@uniswap/v3-periphery": "^1.4.3",
+    "@uniswap/v3-sdk": "^3.10.0",
     "antd": "^5.7.0",
     "axios": "^1.4.0",
     "bignumber.js": "^9.1.1",
